# ScoutOS

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  decision-profile.md  development-workflow.md  domain-model.md  manifesto.md  personal-philosophy.md  roadmap.md  runbook.md  use-cases.md  vision.md
docs/scouts/: shopping.md
prompts/: scout-ranking-prompt.md
src/scoutos/: __init__.py  cli.py  evaluation.py  models.py  scoring.py
src/scoutos/extractors/: base.py  vinted.py
src/scoutos/fixtures/: __init__.py
src/scoutos/fixtures/shopping/: __init__.py  running_wireless_earbuds.json  vinted_frullatore.json
src/scoutos/scouts/: __init__.py  shopping.py
tests/: test_evaluation.py  test_shopping_scout.py
